sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: value unary_! is not a member of Int
    if (!getValeur(i-1)<v){
        ^